# fast-api-tutorial-project

./: .gitignore  LICENSE  README.md  frontend.py  main.py  pyproject.toml
app/: app.py  db.py  images.py  schemas.py  users.py
